--- a/index.html
+++ b/index.html
@@ -49,61 +49,86 @@
           </div>
         </a>
 
-        <div class="profile">
-          <div class="user_image">
-            <img src="./image/sanghyuk_profile.jpg" alt="user_profile" />
+        <a href="https://kangdaelyeol.github.io/gallery/">
+          <div class="profile">
+            <div class="user_image">
+              <img
+                src="https://kangdaelyeol.github.io/gallery/image/sample.jpg"
+                alt="user_profile"
+              />
+            </div>
+            <div class="user_name">강대렬</div>
           </div>
-          <div class="user_name">오상혁</div>
-        </div>
+        </a>
 
-        <div class="profile">
-          <div class="user_image">
-            <img src="./image/sanghyuk_profile.jpg" alt="user_profile" />
+        <a href="https://go-jong.github.io/">
+          <div class="profile">
+            <div class="user_image">
+              <img
+                src="https://go-jong.github.io/image/my_image.jpeg"
+                alt="user_profile"
+              />
+            </div>
+            <div class="user_name">고종현</div>
           </div>
-          <div class="user_name">오상혁</div>
-        </div>
+        </a>
 
-        <div class="profile">
-          <div class="user_image">
-            <img src="./image/sanghyuk_profile.jpg" alt="user_profile" />
+        <a href="https://lgosoup.github.io/">
+          <div class="profile">
+            <div class="user_image">
+              <img
+                src="https://lgosoup.github.io/image/my_image.jpeg"
+                alt="user_profile"
+              />
+            </div>
+            <div class="user_name">강현규</div>
           </div>
-          <div class="user_name">오상혁</div>
-        </div>
+        </a>
 
-        <div class="profile">
-          <div class="user_image">
-            <img src="./image/sanghyuk_profile.jpg" alt="user_profile" />
+        <a href="https://llaun.github.io/">
+          <div class="profile">
+            <div class="user_image">
+              <img
+                src="https://llaun.github.io/img/picpro.jpg"
+                alt="user_profile"
+              />
+            </div>
+            <div class="user_name">할리옹</div>
           </div>
-          <div class="user_name">오상혁</div>
-        </div>
+        </a>
 
-        <div class="profile">
-          <div class="user_image">
-            <img src="./image/sanghyuk_profile.jpg" alt="user_profile" />
+        <a href="https://i02eli.github.io/">
+          <div class="profile">
+            <div class="user_image">
+              <img src="https://i02eli.github.io/life.JPG" alt="user_profile" />
+            </div>
+            <div class="user_name">엘리(Eli)</div>
           </div>
-          <div class="user_name">오상혁</div>
-        </div>
+        </a>
 
-        <div class="profile">
-          <div class="user_image">
-            <img src="./image/sanghyuk_profile.jpg" alt="user_profile" />
+        <a href="https://erkast1213.github.io/">
+          <div class="profile">
+            <div class="user_image">
+              <img
+                src="https://erkast1213.github.io/image/j.jpg"
+                alt="user_profile"
+              />
+            </div>
+            <div class="user_name">에르카</div>
           </div>
-          <div class="user_name">오상혁</div>
-        </div>
+        </a>
 
-        <div class="profile">
-          <div class="user_image">
-            <img src="./image/sanghyuk_profile.jpg" alt="user_profile" />
+        <a href="https://menmasaraa.github.io/css/d5/gallery/">
+          <div class="profile">
+            <div class="user_image">
+              <img
+                src="https://menmasaraa.github.io/css/d5/gallery/image/photo1.jpg"
+                alt="user_profile"
+              />
+            </div>
+            <div class="user_name">사라</div>
           </div>
-          <div class="user_name">오상혁</div>
-        </div>
-
-        <div class="profile">
-          <div class="user_image">
-            <img src="./image/sanghyuk_profile.jpg" alt="user_profile" />
-          </div>
-          <div class="user_name">오상혁</div>
-        </div>
+        </a>
       </div>
     </main>
   </body>
