--- a/profile.html
+++ b/profile.html
@@ -47,7 +47,7 @@
             <div class="name">오상혁</div>
             <div class="introduce">
               안녕하세요! <br />
-              저는 20살 오상혁이라고 합니다!<br />
+              저는 제주대학교에서 온 오상혁이라고 합니다!<br />
               잘부탁드려요!
             </div>
           </div>
