--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
           </div>
         </a>
 
-        <a href="https://menmasaraa.github.io/css/d5/gallery/">
+        <a href="https://menmasaraa.github.io/">
           <div class="profile">
             <div class="user_image">
               <img
-                src="https://menmasaraa.github.io/css/d5/gallery/image/photo1.jpg"
+                src="https://menmasaraa.github.io/image/photo1.jpg"
                 alt="user_profile"
               />
             </div>
